src/test/deca/etapeB/invalid/sum_bad_type0.deca
// Description:
//    Déclaration de variable
//
// Resultats:
//    Ligne 10 : mauvais typage de la somme
// 

{
    int a;
    a = 56 + true;
}
